--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-  <title>Hello World</title>
+  <title>Sarah McIntosh</title>
 </head>
 
 <body>
-  <p> I have created Hello World over 7 times now </p>
+  <p>Hello World. I have created Hello World over 7 times now </p>
 </body>
 
 </html>
