--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <title>Sarah McIntosh</title>
 </head>
 
-<body>
+<body style="background-color: #00ccff>
   <br>
   <br>
-  <p>Hello World. I have created Hello World over 7 times now </p>
+  <h1>Hello World!</h1> 
+    <p>I have created Hello World over 7 times now </p>
 </body>
 
 </html>
