--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Sarah McIntosh</title>
 </head>
 
-<body style="background-color:powderblue>
+<body style="background-color:powderblue">
   <br>
   <br>
   <h1>Hello World!</h1> 
