--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 </head>
 
 <body style="background-color:powderblue">
+  <center>
   <br>
   <br>
   <h1>Hello World!</h1> 
     <p>I have created Hello World over 7 times now </p>
+  </center>
 </body>
 
 </html>
