--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <br>
   <h1>Hello World!</h1> 
     <p>I have created Hello World over 7 times now </p>
+  <br>
+  <br>
+    <img src="turtle.jpg" alt="Smiley face" height="42" width="42">
   </center>
 </body>
 
