--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <title>Sarah McIntosh</title>
@@ -9,6 +10,22 @@
   <br>
   <h1>Hello World!</h1> 
     <p>I have created Hello World over 7 times now </p>
+    <h2> I need some website ideas for a portfolio stuff </h2>
+    <br>
+    <p>  I need some ideas because I want to go into web development after college.
+    <br> I created a basic website using with html using x10hosting.
+    <br> Here are some website ideas </p>
+    <div style="background-color:lightblue">
+      <code> < div >, < br > </code>
+      <h2> List of website ideas </h2>
+      <ul>
+        <li>New Portfolio</li>
+        <li>Photography base</li>
+        <li>Animal base</li>
+        <li>Combo of food, photography, and resume base</li>
+      </ul>
+      
+    </div>
   <br>
   <br>
   </center>
