--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <p>  I need some ideas because I want to go into web development after college.
     <br> I created a basic website using with html using x10hosting.
     <br> Here are some website ideas </p>
-    <div style="background-color:lightblue">
+    <div style="background-color:blue">
+     <center>
       <code> < div >, < br > </code>
       <h2> List of website ideas </h2>
       <ul>
@@ -24,7 +25,7 @@
         <li>Animal base</li>
         <li>Combo of food, photography, and resume base</li>
       </ul>
-      
+      </center>
     </div>
   <br>
   <br>
