--- a/index.html
+++ b/index.html
@@ -16,16 +16,14 @@
     <br> I created a basic website using with html using x10hosting.
     <br> Here are some website ideas </p>
     <div style="background-color:blue">
-     <center>
       <code> < div >, < br > </code>
       <h2> List of website ideas </h2>
-      <ul>
+      <ul text-align:center >
         <li>New Portfolio</li>
         <li>Photography base</li>
         <li>Animal base</li>
         <li>Combo of food, photography, and resume base</li>
       </ul>
-      </center>
     </div>
   <br>
   <br>
