--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p>  I need some ideas because I want to go into web development after college.
     <br> I created a basic website using with html using x10hosting.
     <br> Here are some website ideas </p>
-    <div style="background-color:blue">
+    <div style="background-color:lightred">
       <code> < div >, < br > </code>
       <h2> List of website ideas </h2>
       <ul text-align:center >
