--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+div { text-align: center; }
+ul { display: inline-block; text-align: center; }
 <html>
 <head>
   <title>Sarah McIntosh</title>
