--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-div { text-align: center; }
-ul { display: inline-block; text-align: center; }
+  ul { display:table; margin:0 auto;}
 <html>
 <head>
   <title>Sarah McIntosh</title>
