--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-  ul { display:table; margin:0 auto;}
 <html>
 <head>
   <title>Sarah McIntosh</title>
 </head>
 
 <body style="background-color:powderblue">
+    <style type="text/css">
+       ul { display:table; margin:0 auto;}
+    </style>
   <center>
   <br>
   <br>
