--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
       <code> < div >, < br > </code>
       <h2> List of website ideas </h2>
         </center>
+      <div style="background-color:slateblue">
       <ul>
         <li>New Portfolio</li>
         <li>Photography base</li>
         <li>Animal base</li>
         <li>Combo of food, photography, and resume base</li>
       </ul>
+    </div>
     </div>
   <br>
   <br>
