--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body style="background-color:powderblue">
     <style type="text/css">
-       ul { display:table; margin:0 auto;}
+       ul { display:table; margin:0 auto;background-color:slateblue;}
     </style>
   <center>
   <br>
@@ -22,14 +22,12 @@
       <code> < div >, < br > </code>
       <h2> List of website ideas </h2>
         </center>
-      <div style="background-color:slateblue">
       <ul>
         <li>New Portfolio</li>
         <li>Photography base</li>
         <li>Animal base</li>
         <li>Combo of food, photography, and resume base</li>
       </ul>
-    </div>
     </div>
   <br>
   <br>
