--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body style="background-color:powderblue">
     <style type="text/css">
-       ul { display:table; margin:0 auto;background-color:slateblue;}
+       ul { display:table; margin:0 auto;background-color:burlywood;}
     </style>
   <center>
   <br>
