--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <br> I created a basic website using with html using x10hosting.
     <br> Here are some website ideas </p>
     <div style="background-color:slateblue" text-align:center>
-      <code> < div >, < br > </code>
-      <h2> List of website ideas </h2>
+      
+     <code> < div >  <h2> List of website ideas </h2> < br > </code>
       <br>
       <br>
         </center>
