--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br> Here are some website ideas </p>
     <div style="background-color:slateblue" text-align:center>
       
-     <code> < div >  <h2> List of website ideas </h2> < br > </code>
+       <h2><code> < div > List of website ideas < br > </code></h2> 
       <br>
       <br>
         </center>
