--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     <br> Here are some website ideas </p>
     <div style="background-color:slateblue" text-align:center>
       
-       <h2><code> < div > List of website ideas < br > </code></h2> 
+       <h2><code> < br > < br > < br > < br > < br > 
+         List of website ideas 
+         < br > < br > < br > < br > < br > </code></h2> 
       <br>
       <br>
         </center>
