--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div style="background-color:slateblue" text-align:center>
       
        <h2><br><code> < br > < br > < br > < br > < br > 
-         List of website ideas 
+         <br> List of website ideas <br>
          < br > < br > < br > < br > < br > </code><br></h2> 
       <br>
       <br>
