--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
        <h2><br><code> < br > < br > < br > < br > < br > 
          <br> List of website ideas <br>
-         < br > < br > < br > < br > < br > </code><br></h2> 
+         < br > < br > < br > < br > < br > </code></h2> 
       <br>
       <br>
         </center>
