--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <br>
   <br>
   <h1>Hello World!</h1> 
-    <p>I have created Hello World over 7 times now </p>
+    <p><em>I have created Hello World over 7 times now </em></p>
     <h2> I need some website ideas for a portfolio stuff </h2>
     <br>
-    <p>  I need some ideas because I want to go into web development after college.
+    <p><strong>  I need some ideas because I want to go into web development after college.
     <br> I created a basic website using with html using x10hosting.
-    <br> Here are some website ideas </p>
+     <br> Here are some website ideas </strong> </p>
     <div style="background-color:slateblue" text-align:center>
       
        <h2><br><code> < br > < br > < br > < br > < br > 
          <br> List of website ideas <br>
-         < br > < br > < br > < br > < br > </code></h2> 
+         < br > < br > < br > < br > < br > </code><br></h2> 
       <br>
       <br>
         </center>
@@ -39,6 +39,8 @@
     </div>
   <br>
   <br>
+  <center>
+    <img src = "https://cdn-images-1.medium.com/max/2000/1*ve6zpKTPG7WgJ-fvqou9sA.jpeg"
  
 </body>
 
