--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <br>
   <br>
   <center>
-    <img src = "https://cdn-images-1.medium.com/max/2000/1*ve6zpKTPG7WgJ-fvqou9sA.jpeg"
+    <img src = "https://cdn-images-1.medium.com/max/2000/1*ve6zpKTPG7WgJ-fvqou9sA.jpeg" style="width:500px;height:600px;">
  
 </body>
 
