--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Sarah McIntosh</title>
+  <link rel="stylesheet type/css href="SarahMcI425.github.io/css/style.css">
 </head>
 
 <body style="background-color:powderblue">
