--- a/Database_Project/index.html
+++ b/Database_Project/index.html
@@ -32,7 +32,7 @@
             Picking a name for your new dog is just as hard. You either have a named picked out 
             already and you are sticking with that name. Or you have no idea and want to wait to 
             get home with that special friend to see what their personailty is like. <br>
-            <strong>Either way its all stressful.</strong> <br>
+            <strong>Either way it's all stressful.</strong> <br>
         </p>
         <p>
             Now if you want to add more stress to your life with picking a name - your someone who wants to give
