--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
 </head>
 <body>
+  <center>
 <h1> Links to Stuff <h1>
+  <ol>
+    <li>SarahMcI425.github.io/Database_Project/index.html</li>
+    <li>SarahMcI425.github.io/homework/index.html</li>
+  </ol>
+  </center>
   </body>
   </html>
   
