--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <center>
 <h1> Links to Stuff <h1>
   <ol>
-    <li>SarahMcI425.github.io/Database_Project/index.html</li>
-    <li>SarahMcI425.github.io/homework/index.html</li>
+    <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
+    <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
   </ol>
   </center>
   </body>
