--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
 </head>
 <body>
-  <center>
-<h1> Links to Stuff <h1>
+
+<h1> Links to Stuff </h1>
   <ol>
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
     <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
   </ol>
-  </center>
   </body>
   </html>
   
