--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Links to Stuff </title>
 </head>
 <body>
-
 <h1> Links to Stuff </h1>
   <ol>
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
