--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 </head>
 <body>
 <h1> Links to Stuff </h1>
-  <ol>
+  <ul>
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
     <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
-  </ol>
+    <li><a href = "SarahMcI425.github.io/Girl Scouts/index.html> Girl Scouts (For 610 CDM Course)</a></li>
+  </ul>
   </body>
   </html>
   
