--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <ul>
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
     <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
-    <li><a href = "SarahMcI425.github.io/Girl Scouts/index.html> Girl Scouts (For 610 CDM Course)</a></li>
+    <li><a href ="SarahMcI425.github.io/Girl Scouts/index.html"> Girl Scouts (For 610 CDM Course)</a></li>
   </ul>
   </body>
   </html>
