--- a/Database_Project/index.html
+++ b/Database_Project/index.html
@@ -3,7 +3,7 @@
 <head>
         <title>Dog Names of Pittsburgh</title>
         <link rel = "stylesheet" href = "style.css">
-        <link rel = "SarahMcI425.github.io/css/" href = "style.css>
+        <link rel = "SarahMcI425.github.io/Database_Project/style.css" href = "style.css>
 </head>
 <body>
 
