--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
     <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
     <li><a href ="SarahMcI425.github.io/Girl Scouts/index.html"> Girl Scouts (For 610 CDM Course)</a></li>
+    <li><a href = "https://sarahmci425.github.io/Self_Guided/index.html"> Skills Guide Project</a>
   </ul>
   </body>
   </html>
