--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1> Links to Stuff </h1>
+  <h3> Sarah McIntosh Main Page</h3>
+    <h4> Nicely design site coming soon </h4>
   <ul>
     <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
     <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
