--- a/Database_Project/index.html
+++ b/Database_Project/index.html
@@ -15,7 +15,14 @@
   </div>
         
   <div class = "row">
-    <div class="column1">.....</div>
+    <div class="column1">
+            <ul>
+            <li><a class="active" href="https://sarahmci425.github.io/">Home</a></li>
+            <li><a href="https://sarahmci425.github.io/Self_Guided/index.html">Self-Guided Skills Project</a></li>
+            <li><a href="https://sarahmci425.github.io/homework/index.html">Homework 1</a></li>
+            <li><a href="https://sarahmci425.github.io/Girl%20Scouts/index.html">Girl Scout Webpage</a></li>
+          </ul>
+     </div>
 
     <div class = "column2">
         <br>
