--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Links to Stuff </title>
+        <title>Sarah McIntosh | Main page to projects</title>
+        <link rel = "stylesheet" href = "style.css">
 </head>
 <body>
-<h1> Links to Stuff </h1>
-  <h3> Sarah McIntosh Main Page</h3>
-    <h4> Nicely design site coming soon </h4>
-  <ul>
-    <li><a href ="SarahMcI425.github.io/Database_Project/index.html"> Database Project</a></li>
-    <li><a href ="SarahMcI425.github.io/homework/index.html"> Homework 1</a></li>
-    <li><a href ="SarahMcI425.github.io/Girl Scouts/index.html"> Girl Scouts (For 610 CDM Course)</a></li>
-    <li><a href = "https://sarahmci425.github.io/Self_Guided/index.html"> Self-Guided Skills Project</a>
-  </ul>
-  </body>
-  </html>
+
+    <!---Start of making 3 columns to organzie website-->
+  <div class = "header">
+        <br>
+        <h1>Sarah McIntosh Projects</h1>
+        <br>
+  </div>
+        
+  <div class = "row">
+<!--Column 1 blank-->    
+    <div class="column1">.....</div>
+    <div class = "row">
+<!--Column 2 holds the Links to all the projects--> 
+    <div class = "column2">
+        <ul>
+            <li><a href = "SarahMcI425.github.io/homework/index.html"><h2>Homework #1</h2></a></li>
+            <li><a href = "SarahMcI425.github.io/Database_Project/index.html"><h2>Database Project</h2></a></li>
+            <li><a href = "https://sarahmci425.github.io/Self_Guided/index.html"><h2>Self-Guided Skills Project</h2></a></li>
+            <li><a href = "https://sarahmci425.github.io/Girl%20Scouts/index.html"><h2>Girl Scout Webpage</h2></a></li>
+        </ul>
+
+    <hr>
+    </div>
+  </div>
+<!--Column 3 blank--> 
+    <div class = "column3">.....</div>  
+</body>
+</html>
   
