--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
         <title>Sarah McIntosh | Main page to projects</title>
-        <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "mainstyle.css">
 </head>
 <body>
 
