--- a/Self_Guided/index.html
+++ b/Self_Guided/index.html
@@ -68,7 +68,21 @@
         <p>Wanna learn a super fun fact!</p>
 
         <button onclick="myFunction()">Click me!</button>
-
+        
+          <h1>Learning Log Template</h1>
+            <table class="table table-bordered">
+            <tr><th class="bg-primary text-white">Start: 2/11/19</th><th class="bg-primary text-white">End: 2/24/19</th><th class="bg-primary text-white">Description of focus: Digital Storytelling</th><th class="bg-primary text-white">Notes on process: Trying to gather data on the worlds population, median age, and GDP to display on my website.</th>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            <tr><td>Your text here</td><td>Your text here</td><td>Your text here</td><td>Your text here</td></tr>
+            </table>
 <p id="demo"></p>
         
     <hr>
