--- a/index.html
+++ b/index.html
@@ -19,14 +19,22 @@
     <div class = "row">
 <!--Column 2 holds the Links to all the projects--> 
     <div class = "column2">
+    <hr>
         <ul>
-            <li><a href = "SarahMcI425.github.io/homework/index.html"><h2>Homework #1</h2></a></li>
             <li><a href = "SarahMcI425.github.io/Database_Project/index.html"><h2>Database Project</h2></a></li>
             <li><a href = "https://sarahmci425.github.io/Self_Guided/index.html"><h2>Self-Guided Skills Project</h2></a></li>
             <li><a href = "https://sarahmci425.github.io/Girl%20Scouts/index.html"><h2>Girl Scout Webpage</h2></a></li>
         </ul>
-
     <hr>
+      <h3>
+              Contact Me
+      </h3>
+            <p>
+                Email: smcintosh425@gmail.com    
+            </p>
+            <p>
+                Phone: (484) 288-0004  
+            </p>
     </div>
   </div>
 <!--Column 3 blank--> 
