--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
     <div class = "row">
 <!--Column 2 holds the Links to all the projects--> 
     <div class = "column2">
+    <p>
+         Hello, I am Sarah McInotsh-Bartholomew. I'm a front-end web developer. 
+    </p>
+    <p>
+            I am graduting from University of Pittsburgh at the end of April with a major in Media and Professional Communications
+            and a certificate in Digital Media.
+    </p>
     <hr>
         <ul>
             <li><a href = "SarahMcI425.github.io/Database_Project/index.html"><h2>Database Project</h2></a></li>
