--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
          Hello, I am Sarah McInotsh-Bartholomew. <br>I'm a front-end web developer. 
     </p>
     <p>
-            I am graduting from University of Pittsburgh at the end of April with a major in Media and Professional Communications
-            and a certificate in Digital Media.
-    </p>
+         I am graduting from University of Pittsburgh at the end of April with a major in Media and Professional Communications
+         and a certificate in Digital Media.
+     </p>
+    <h5>
+            **Disclamer: Website is still under construction**
+    </h5>
     <hr>
         <ul>
             <li><a href = "SarahMcI425.github.io/Database_Project/index.html"><h2>Database Project</h2></a></li>
