--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!--Column 2 holds the Links to all the projects--> 
     <div class = "column2">
     <p>
-         Hello, I am Sarah McInotsh-Bartholomew. <br>I'm a front-end web developer. 
+         Hello, I am Sarah McInotsh-Bartholomew. I'm a front-end web developer. 
     </p>
     <p>
          I am graduting from University of Pittsburgh at the end of April with a major in Media and Professional Communications
