--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          and a certificate in Digital Media.
      </p>
     <h5>
-            **Disclamer: Website is still under construction**
+            **Disclaimer: Website is still under construction**
     </h5>
     <hr>
         <ul>
