--- a/index.html
+++ b/index.html
@@ -1,54 +1,165 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-        <title>Sarah McIntosh | Main page to projects</title>
-        <link rel = "stylesheet" href = "mainstyle.css">
-</head>
-<body>
+	<head>
+		<title>Sarah McIntosh</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
 
-    <!---Start of making 3 columns to organzie website-->
-  <div class = "header">
-        <br>
-        <h1>Sarah McIntosh Projects</h1>
-        <br>
-  </div>
-        
-  <div class = "row">
-<!--Column 1 blank-->    
-    <div class="column1">.....</div>
-    <div class = "row">
-<!--Column 2 holds the Links to all the projects--> 
-    <div class = "column2">
-    <p>
-         Hello, I am Sarah McInotsh-Bartholomew. I'm a front-end web developer. 
-    </p>
-    <p>
-         I am graduting from University of Pittsburgh at the end of April with a major in Media and Professional Communications
-         and a certificate in Digital Media.
-     </p>
-    <h5>
-            **Disclaimer: Website is still under construction**
-    </h5>
-    <hr>
-        <ul>
-            <li><a href = "SarahMcI425.github.io/Database_Project/index.html"><h2>Database Project</h2></a></li>
-            <li><a href = "https://sarahmci425.github.io/Self_Guided/index.html"><h2>Self-Guided Skills Project</h2></a></li>
-            <li><a href = "https://sarahmci425.github.io/Girl%20Scouts/index.html"><h2>Girl Scout Webpage</h2></a></li>
-        </ul>
-    <hr>
-      <h3>
-              Contact Me
-      </h3>
-            <p>
-                Email: smcintosh425@gmail.com    
-            </p>
-            <p>
-                Phone: (484) 288-0004  
-            </p>
-    </div>
-  </div>
-<!--Column 3 blank--> 
-    <div class = "column3">.....</div>  
-</body>
+		<!-- Header -->
+			<section id="header">
+				<header>
+					<span class="image avatar"><img src="images/propic1.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Sarah McIntosh</a></h1>
+					<p>I got reprogrammed by a rogue AI<br />
+					and now I'm totally cray</p>
+				</header>
+				<nav id="nav">
+					<ul>
+						<li><a href="#one" class="active">About</a></li>
+						<li><a href="#two">Things I Can Do</a></li>
+						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#four">Contact</a></li>
+					</ul>
+				</nav>
+				<footer>
+					<ul class="icons">
+					<!-- Keeping hidden until needed
+						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					-->		
+						<li><a href="SarahMcI425.github.io" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+					</ul>
+				</footer>
+			</section>
+
+		<!-- Wrapper -->
+			<div id="wrapper">
+
+				<!-- Main -->
+					<div id="main">
+
+						<!-- One -->
+							<section id="one">
+								<div class="container">
+									<header class="major">
+										<h2>Life is a Struggle <br> and this is Mine</h2>
+									</header>
+									<p>Hi there! I am a Front-End Web Developer.<br>
+									I am a Pittsburgh transplant, from Philadelphia, who will be graduting from college at the end of April 2019.
+									I am graduting from the University of Pittsburgh with a Bachelor of Arts in Media and Professional Commuications and a
+									certificate in Digital Media.
+									I started as a biology major but then I took a html elective and fell in love with web development coding.
+									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.</p>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two">
+								<div class="container">
+									<h3>Things I Can Do</h3>
+									<p>I have a strong background in the basic's in web development and I am constantly teaching myself new code to better improve my skills.</p>
+									<p>In addition, I have a strong passion for photography and have been building my photography skills since I was very young.</p>
+									<h3>Skills</h3>
+									<ul class="feature-icons">
+										<li class="fa-code">HTML, CSS, JavaScript</li>
+										<li class="fa-cubes">Digital & Film Photograpy</li>
+										<li class="fa-code">PHP & Bootstrap</li>
+										<li class="fa-coffee">Photoshop & Video Editing</li>
+										<li class="fa-code">Oracle, MySQL</li>
+										<li class="fa-users">SEO Organic Marketing Stragties</li>
+									</ul>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>A Few Accomplishments</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Possibly broke spacetime</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Terraformed a small moon</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Snapped dark matter in the wild</h4>
+												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four">
+								<div class="container">
+									<h3>Contact Me</h3>
+									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<form method="post" action="#">
+										<div class="row uniform">
+											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+										</div>
+										<div class="row uniform">
+											<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+										</div>
+										<div class="row uniform">
+											<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+										</div>
+										<div class="row uniform">
+											<div class="12u">
+												<ul class="actions">
+													<li><input type="submit" class="special" value="Send Message" /></li>
+													<li><input type="reset" value="Reset Form" /></li>
+												</ul>
+											</div>
+										</div>
+									</form>
+								</div>
+							</section>
+				<!-- Footer -->
+					<section id="footer">
+						<div class="container">
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollzer.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
-  
