--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 				<header>
 					<span class="image avatar"><img src="images/propic1.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sarah McIntosh</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -29,6 +27,7 @@
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Contact</a></li>
+						<li><a href="file:///C:/Users/babyb/Desktop/Sarah%20McIntosh-Bartholomew.pdf" download>Resume</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -62,6 +61,7 @@
 									certificate in Digital Media.
 									I started as a biology major but then I took a html elective and fell in love with web development coding.
 									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.</p>
+									<p>I love teaching myself new languages and I am currently trying to teach myself angular</p>
 								</div>
 							</section>
 
@@ -87,29 +87,41 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Examples of websites I have built from scratch.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://sarahmci425.github.io/Self_Guided/" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Self Guided Skills Project</h4>
+												<p>For this project we had to pick a certain skill to hone in on. I picked creating graphs with a application called Tableau that allows you to load in data and you can created different kind of data visualization with it.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://sarahmci425.github.io/Girl%20Scouts/" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Girl Scout Troops</h4>
+												<p>I am volunteering to build a active site for a local Girl Scout Troop back home. The site will show active locations of where they will be selling cookies and the dates and times they will be there.
+												   It will also have a contact page to be able to join the troop and a page to show what badges the girls are working towards.
+												</p>
 											</div>
 										</article>
+										<article>
+											<a href="https://sarahmci425.github.io/Database_Project/index.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Pittsburgh Database Project</h4>
+												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
+											</div>
+										</article>
+
+								<!-- Add in the the site for your group project once completed 
 										<article>
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Pittsburgh Database Project</h4>
+												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
 											</div>
 										</article>
+								-->
 									</div>
 								</div>
 							</section>
@@ -118,7 +130,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>Add text in later</p>
 									<form method="post" action="#">
 										<div class="row uniform">
 											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
@@ -141,6 +153,9 @@
 									</form>
 								</div>
 							</section>
+
+					</div>
+
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
