--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 									I am graduting from the University of Pittsburgh with a Bachelor of Arts in Media and Professional Commuications and a
 									certificate in Digital Media.
 									I started as a biology major but then I took a html elective and fell in love with web development coding.
-									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.</p>
-									<p>I love teaching myself new languages and I am currently trying to teach myself angular</p>
+									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.</p><br>
+									I love teaching myself new languages and I am currently trying to teach myself angular
 								</div>
 							</section>
 
