--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					-->		
 						<li><a href="SarahMcI425.github.io" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="smcintosh425@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -56,12 +56,12 @@
 										<h2>Life is a Struggle <br> and this is Mine</h2>
 									</header>
 									<p>Hi there! I am a Front-End Web Developer.<br>
-									I am a Pittsburgh transplant, from Philadelphia, who will be graduting from college at the end of April 2019.
+									I am a Pittsburgh transplant, originally from Philadelphia, who will be graduting from college at the end of April 2019.
 									I am graduting from the University of Pittsburgh with a Bachelor of Arts in Media and Professional Commuications and a
 									certificate in Digital Media.
 									I started as a biology major but then I took a html elective and fell in love with web development coding.
-									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.</p><br>
-									I love teaching myself new languages and I am currently trying to teach myself angular
+									Since I took my first html course I have been taking all the web development courses that Pitt has to offer.<br>
+									I love teaching myself new languages and I am currently trying to teach myself angular.</p>
 								</div>
 							</section>
 
@@ -69,8 +69,8 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>I have a strong background in the basic's in web development and I am constantly teaching myself new code to better improve my skills.</p>
-									<p>In addition, I have a strong passion for photography and have been building my photography skills since I was very young.</p>
+									<p>I have a strong background in the basic's in web development and I am constantly teaching myself new code to better improve my skills.<br>
+									In addition, I have a strong passion for photography and have been building my photography skills since I was very young.</p>
 									<h3>Skills</h3>
 									<ul class="feature-icons">
 										<li class="fa-code">HTML, CSS, JavaScript</li>
@@ -89,6 +89,7 @@
 									<h3>A Few Accomplishments</h3>
 									<p>Examples of websites I have built from scratch.</p>
 									<div class="features">
+
 										<article>
 											<a href="https://sarahmci425.github.io/Self_Guided/" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
@@ -96,6 +97,7 @@
 												<p>For this project we had to pick a certain skill to hone in on. I picked creating graphs with a application called Tableau that allows you to load in data and you can created different kind of data visualization with it.</p>
 											</div>
 										</article>
+
 										<article>
 											<a href="https://sarahmci425.github.io/Girl%20Scouts/" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
@@ -105,6 +107,18 @@
 												</p>
 											</div>
 										</article>
+
+										<!-- Add in the the site for your group project once completed -->
+										<article>
+											<a href="#" class="image"><img src="images/hero1.jpg" alt="" /></a>
+													<div class="inner">
+															<h4>Pittsburgh Cuisine</h4>
+															<p>This was a group project that we scrapped data from Yelp to compile a list of 500 plus data on different locations you can go an eat at in Allegeny County.
+																	You can view the data in different data visualization options.
+															</p>
+														</div>
+										</article>
+
 										<article>
 											<a href="https://sarahmci425.github.io/Database_Project/index.html" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
@@ -112,50 +126,47 @@
 												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
 											</div>
 										</article>
-
-								<!-- Add in the the site for your group project once completed 
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Pittsburgh Database Project</h4>
-												<p>This project was to take data from an open source and use it to create maps in the program tableau.</p>
-											</div>
-										</article>
-								-->
 									</div>
 								</div>
 							</section>
+						<!--Four-->
+						<section id="four">
+							<div class="container">
+								<h3>Contact Me</h3>
+								<h4>Name: Sarah L McIntosh-Bartholomew<br>
+										<a href="https://mail.google.com/mail/u/0/#inbox/FMfcgxwCgCPDWZgSWLCGqHWPQHGnDVCP?compose=XBcJlCGsCSCcZQcqNvMxqDNpvtXJMfcMzxdHFWwwfpTfdSJTRkWsBSqHPzPMGdmCvHQdgCVfMtCKCkZv"> Email: sMcIntosh425@gmail.com<br></a>
+										Phone: (484) 288-0004<br>
+										Address: Oakland, Pittsburgh PA
+								</h4>
 
-						<!-- Four -->
-							<section id="four">
-								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Add text in later</p>
-									<form method="post" action="#">
-										<div class="row uniform">
-											<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+								<!--  Contact form 
+								<form method="post" action="#">
+									<div class="row uniform">
+										<div class="6u 12u(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
+										<div class="6u 12u(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
+									</div>
+									<div class="row uniform">
+										<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+									</div>
+									<div class="row uniform">
+										<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+									</div>
+									<div class="row uniform">
+										<div class="12u">
+											<ul class="actions">
+												<li><input type="submit" class="special" value="Send Message" /></li>
+												<li><input type="reset" value="Reset Form" /></li>
+											</ul>
 										</div>
-										<div class="row uniform">
-											<div class="12u"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-										</div>
-										<div class="row uniform">
-											<div class="12u">
-												<ul class="actions">
-													<li><input type="submit" class="special" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
-								</div>
-							</section>
+									</div>
+								</form>
+							-->
+							</div>
+						</section>
+
 
 					</div>
-
+				
 				<!-- Footer -->
 					<section id="footer">
 						<div class="container">
@@ -177,4 +188,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+	
 </html>
